Fix alignment problems
The fix that I find most simple also increases the button height, but
that could probably be considered a feature.

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -13,6 +13,10 @@
     background-color:#fefdf6 !important;
 }
 
+.nav-btn {
+    line-height: initial;
+}
+
 @media print {
   .tab-content > .tab-pane {
     display: block !important;
